pov-simple-backup (0.3) UNRELEASED; urgency=low

  * Make pov-simple-backup -S output something even if you don't use
    clean_up_old_backups in the config file.
  * Don't round sizes to megabytes below 10M, to gigabytes below 10G.
    Increases precision (there's quite a difference between 1G and 1.9G).
  * Changed output format of pov-simple-backup -S slightly for clarity.

 -- Marius Gedminas <marius@gedmin.as>  Thu, 29 Aug 2013 12:13:10 +0300

pov-simple-backup (0.2) precise; urgency=low

  * New option: -s (skip existing backup files).
  * New option: -S (estimate backup size).
  * New commands: back_up_mysql, rsync_to, rsync_backup_to, scp_backup_to.
  * copy_backup_to uses rsync instead of scp.

 -- Marius Gedminas <marius@gedmin.as>  Thu, 29 Aug 2013 12:11:00 +0300

pov-simple-backup (0.1) precise; urgency=low

  * Initial release.

 -- Marius Gedminas <marius@gedmin.as>  Wed, 28 Aug 2013 18:56:41 +0300