@@ -5,6 +5,7 @@ pov-simple-backup (0.3) UNRELEASED; urgency=low
   * Don't round sizes to megabytes below 10M, to gigabytes below 10G.
     Increases precision (there's quite a difference between 1G and 1.9G).
   * Changed output format of pov-simple-backup -S slightly for clarity.
+  * Show a grand total at the end of pov-simple-backup -S output.
 
  -- Marius Gedminas <marius@gedmin.as>  Thu, 29 Aug 2013 12:13:10 +0300
 
